--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -1,2 +1,3 @@
 # Use the httpd-parent image as base
-FROM quay.io/redhattraining/httpd-parent
+#FROM quay.io/redhattraining/httpd-parent
+FROM default-route-openshift-image-registry.apps.ap45.prod.nextcle.com/bkthong-shared-is/httpd-parent:latest
