--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -1,3 +1,3 @@
 # Use the httpd-parent image as base
 #FROM quay.io/redhattraining/httpd-parent
-FROM default-route-openshift-image-registry.apps.ap45.prod.nextcle.com/bkthong-shared-is/httpd-parent:latest
+FROM 210.195.145.19/redhattraining/httpd-parent:latest
